# opteric

./: .gitignore  README.md
rust/: Cargo.toml  README.md
rust/src/: iterator.rs  lib.rs  value.rs
typescript/: opteric.ts
